added content to projects

--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -2,6 +2,12 @@ body {
     height: 100%;
     width: 100%;
 }
+.image-container {
+    background-image: url(https://cdn.nimbusthemes.com/2017/09/09233341/Free-Nature-Backgrounds-Seaport-During-Daytime-by-Pexels.jpeg);
+    width: 100%;
+    height: 50%;
+    background-repeat: no-repeat;
+}
   
   li a {
     display: inline;
@@ -11,21 +17,13 @@ body {
   }
 nav {
     border: 1px solid black;
-    
     height: 250px;
     width: 100%;
-    /* display: flex;
-    flex-direction: row; */
+
 }
 h1 {
     text-align: center;
 }
-.image-container {
-    background-color: aqua;
-}
-   
-
-
  .parent-container div {
     border: 1px solid black;
     justify-content: center;
@@ -43,7 +41,7 @@ h1 {
 .contact-container {
     grid-area: footer;
 }
-@media screen and (max-device-width: 1600px) {
+@media screen and (max-device-width: 1300px) {
 
 .parent-container {
     border: 1px solid black;
