cleaned up, updated to ES6, well commented

--- a/02week/blog/css/style.css
+++ b/02week/blog/css/style.css
@@ -9,7 +9,7 @@ div.container {
   height: 1300px;
   padding: 0 40px 40px 40px;
   margin: 20px auto;
-  font: 12px "lucida grande", Arial, sans-serif;
+  font: 12px "Lucida Grande", Arial, sans-serif;
 }
 /*navigation*/
 ul {
