--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -16,6 +16,11 @@ header {
   clear: both;
 }
 
+span {
+  background-color: blue;
+  line-height: 44px;ß
+}
+
 nav {
   float: right;
   color: #B7BDC4;
@@ -53,7 +58,7 @@ ul {
 }
 
 li {
-  display: inline-block;
+  display: inline;
   text-align: center;
   height: 44px;
   width: 119px;
