--- a/05week/transitions-and-transformations/css/style.css
+++ b/05week/transitions-and-transformations/css/style.css
@@ -14,11 +14,11 @@ body {
 }
 
 .odd {
-  transition: transform 1500ms ease-in, background-color 1500ms ease-out, margin-left 1500ms ease;
+  transition: transform 1000ms cubic-bezier(0.55, 0.06, 0.68, 0.19), background-color 1000ms ease-out, margin-left 1000ms ease;
 }
 
 .even {
-  transition: transform 500ms ease-in, background-color 500ms ease-out, margin-left 500ms ease;
+  transition: transform 500ms cubic-bezier(0.55, 0.06, 0.68, 0.19), background-color 500ms ease-out, margin-left 500ms ease;
 }
 
 .container:hover
