--- a/checkpoints/checkpoint2/css/style.css
+++ b/checkpoints/checkpoint2/css/style.css
@@ -93,12 +93,13 @@ main {
   flex-direction: column;
   align-items: center;
   margin: auto;
+  padding-bottom: 30px;
 }
 
 h1 {
   font-size: 65px;
-  margin: auto;
   text-align: center;
+  margin: 85px auto;
 }
 
 p {
