using jquery to add different messages according to error regexp

--- a/09week/myown-form/style.css
+++ b/09week/myown-form/style.css
@@ -43,11 +43,11 @@ main {
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  text-align: center;
+  text-align: ;
 }
 .form {
   background: var(--base);
-  width: 50%;
+  width: auto;
   height: auto;
   align-self: center;
   padding: var(--spacing);
@@ -62,6 +62,26 @@ main {
 }
 #spacing {
   color: black;
+}
+.firstName-error {
+  color: red;
+  font-size: 10px;
+  display: none;
+}
+.lastName-error {
+  color: red;
+  font-size: 10px;
+  display: none;
+}
+.email-error {
+  color: red;
+  font-size: 10px;
+  display: none;
+}
+.password-error {
+  color: red;
+  font-size: 10px;
+  display: none;
 }
 @media(min-width: 1024px) {
   nav {
