fixed the input font color

--- a/09week/customer-satisfaction/css/style.css
+++ b/09week/customer-satisfaction/css/style.css
@@ -23,12 +23,19 @@ form{
 input[type=password]{
   color: grey;
 }
+input[type=url]{
+  color: grey;
+}
+input[type="email"]{
+  color: grey;
+}
 input{
   border-radius: 2px;
   border: 1px solid grey;
   padding: 2px;
   margin: 10px;
   height: 25px;
+  color: grey;
 }
 textarea{
   height: 50px;
