added and almost completed final project

--- a/extra-credit/css/style.css
+++ b/extra-credit/css/style.css
@@ -1,29 +1,75 @@
 
-body {
+html, body {
     height: 100%;
     width: 100%;
+    font-family: sans-serif;
     /* background-image: url(https://images.unsplash.com/photo-1476136236990-838240be4859?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80); */
     background-repeat: no-repeat;
     background-size: cover;
-    /* background-color: black; */
+    color: #222;
 }
-
-.border2 {
-    border: 2px solid green;
-}
-.div-size {
-    height: 500px;
-}
-.navBar {
+.navbar {
     width:100%;
-    /* overflow: hidden; */
+    padding: .8rem;
 } 
+.navbar-nav li {
+    padding-right: 20px;
+}
+.nav-link {
+    font-size: 1.6em !important;
+}
+.padding {
+    padding-bottom: 2rem;
+}
 
 .header {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-image: url(https://images.unsplash.com/photo-1476136236990-838240be4859?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
+.div-size {
+    height: 500px;
+}
+.display-4 {
+    padding-top: 2rem;
+}
+.lead {
+    margin: 0 auto;
+    width: 95%;
+    padding-top: 1rem;
+}
+.lead img {
+    border-radius: 50%;
+   
+}
+.about-me img {
+    border-radius: 50%;
+}
+.about hr {
+    border-top: 2px solid #b4b4b4;
+    width: 65%;
+    margin-top: .3rem;
+}
+
+.fa-code {
+    color: #e54d26;
+}
+.fa-css3 {
+    color: #2163af;
+}
+.education {
+    padding: 1rem;
+    justify-content: center;
+}
+.social a {
+    font-size: 4.5em;
+    padding: 3rem;
+}
+
 
 
 .main-flex-container {
@@ -55,7 +101,7 @@ body {
  /* small */
 /* @media screen and (min-device-width: 576px) { */
     
-    
+
 /* medium */ 
 /* @media screen and (min-device-width: 786px) { */ 
 
