--- a/extra-credit/css/style.css
+++ b/extra-credit/css/style.css
@@ -29,7 +29,42 @@ html, body {
     background-image: url(https://images.unsplash.com/photo-1476136236990-838240be4859?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80);
     background-repeat: no-repeat;
     background-size: cover;
+    height: 100%;
 }
+h2 {
+    font-size: 3em;
+    padding: 2rem;
+}
+.fa-facebook {
+    color: #3b5998;
+}
+.fa-google-plus-g {
+    color: #dd4b39;
+}
+.fa-instagram {
+    color: #517fa4;
+}
+.fa-youtube {
+    color: #bb0000;
+}
+.fa-youtube:hover, .fa-instagram:hover, .fa-google-plus-g:hover, .fa-facebook:hover {
+    color: #d5d5d5;
+}
+footer {
+    align-items: center;
+    justify-content: center;
+    background-color: #3f3f3f;
+    color: #d5d5d5;
+    padding: 2rem;
+    font-size: 1.2em;
+}
+
+
+
+
+
+
+
 
 .div-size {
     height: 500px;
