--- a/extra-credit/css/style.css
+++ b/extra-credit/css/style.css
@@ -50,6 +50,16 @@ h2 {
 .fa-youtube:hover, .fa-instagram:hover, .fa-google-plus-g:hover, .fa-facebook:hover {
     color: #d5d5d5;
 }
+.card-img-top img {
+    border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+
+}
+.card-img-top:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
 footer {
     align-items: center;
     justify-content: center;
