--- a/extra-credit/css/style.css
+++ b/extra-credit/css/style.css
@@ -21,16 +21,31 @@ html, body {
 .padding {
     padding-bottom: 2rem;
 }
+.projects {
+    background-color: lightgrey;
+}
+.education {
+    background-color: #d5d5d5;
+}
+.about {
+    background-image: url(https://images.unsplash.com/photo-1459233313842-cd392ee2c388?ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80);
+    color: white;
+    background-color: white;
+}
+
 
 .header {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
+    padding: 45px;
     background-image: url(https://images.unsplash.com/photo-1476136236990-838240be4859?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80);
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
+    color: white;
 }
+
 h2 {
     font-size: 3em;
     padding: 2rem;
@@ -60,6 +75,12 @@ h2 {
 .card-img-top:hover {
     box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
+hr.light {
+    border-top: 1px #d5d5d5;
+    width: 75%;
+    margin-top: .8rem;
+    margin-bottom: 1rem;
+}
 footer {
     align-items: center;
     justify-content: center;
@@ -71,14 +92,6 @@ footer {
 
 
 
-
-
-
-
-
-.div-size {
-    height: 500px;
-}
 .display-4 {
     padding-top: 2rem;
 }
@@ -124,36 +137,25 @@ footer {
    
     
 }
-.parent-container {
-    height: 200px;
-    width: 300px;
-    border: 1px solid red;
-    background-color: rgba(8, 7, 7, 0.356);
-    color: whitesmoke;
-    padding-left: 30px;
-    align-items: center;
-    float: right;
-    position: absolute;
-    margin: 30px;
-  /* background-color: #ffffff; */
-    /* opacity: 0.6; */
-}
-
-
-
-
-
  /* small */
 /* @media screen and (min-device-width: 576px) { */
     
 
 /* medium */ 
-/* @media screen and (min-device-width: 786px) { */ 
-
+@media screen and (min-device-width: 786px) { 
+.display-4 {
+    font-size: 200%;
+}
+.social a {
+    font-size: 2.5em;
+    padding: 1.2rem;
+}
+}
 
 /* large */
-/* @media screen and (max-device-width: 992px) { */
-
-
-/* xl  */
-/* @media screen and (max-device-width: 1200px) { */
+@media screen and (max-device-width: 992px) {
+    .social a {
+        font-size: 4em;
+        padding: 2rem;
+    }
+}
