--- a/01week/helloworld/css/style.css
+++ b/01week/helloworld/css/style.css
@@ -1,11 +1,18 @@
-h1 {
-  font-size: 600px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  text-align: center;
-  background: #D73C2C;
-  color: #859596;
-  margin: 0;
+header {
+  color: blue;
+}
+
+main {
+  color: red;
+}
+
+article {
+  color: orange;
+}
+
+aside {
+  color: pink;
+  float: right;
+}
 
 }
