--- a/05week/travel-gram/css/style.css
+++ b/05week/travel-gram/css/style.css
@@ -10,7 +10,7 @@ body {
 .mobile {
   grid-area: mobile;
   display: flex;
-  justify-content: center;   
+  justify-content: center;
 }
 
 .tablet {
@@ -85,7 +85,17 @@ body {
 }
 
 .box {
-  background: linear-gradient(160deg,#00f6ff,#89dfdc,#b4c7ba,#d0ae99,#e29379,#f0765a,#f9513b,#ff001b);
+  background: linear-gradient(
+    160deg,
+    #4ad010,
+    #df89d9,
+    #452be9,
+    #d0ae99,
+    #e29379,
+    #f0765a,
+    #f9513b,
+    #00b3ff
+  );
   min-height: 200px;
   width: 200px;
   border-radius: 4px;
@@ -118,19 +128,17 @@ body {
     grid-area: mobile;
     display: none;
   }
-  
+
   .tablet {
     grid-area: tablet;
     display: flex;
-    justify-content: center;   
+    justify-content: center;
   }
-  
+
   .desktop {
     grid-area: desktop;
     display: none;
   }
-
-
 }
 
 /* desktop site */
@@ -158,17 +166,15 @@ body {
     grid-area: mobile;
     display: none;
   }
-  
+
   .tablet {
     grid-area: tablet;
     display: none;
   }
-  
+
   .desktop {
     grid-area: desktop;
     display: flex;
-    justify-content: center;  
+    justify-content: center;
   }
-
-
 }
