--- a/04week/welcome-to-our-site/css/style.css
+++ b/04week/welcome-to-our-site/css/style.css
@@ -1,81 +1,81 @@
-.container {
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
+body {
+  font-family: "Times New Roman";
+  color: white;
+  padding: 0;
+  margin: 0;
 }
 
 .topbox {
+  background-color: #2bcdc0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   width: 100vw;
   height: 50vh;
-  background: #2BCDC0;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  font-size: 75px;
+}
+
+.topbox > p {
   color: white;
+  font-size: 48px;
+  margin-right: 40px;
+  margin-left: 40px;
 }
 
 .bottombox {
+  background-color: black;
   display: flex;
-  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
   width: 100vw;
-  background: black;
-  justify-content: space-between;
+  height: 50vh;
   color: white;
 }
 
 .box {
-  width: 500px;
+  padding-top: 40px;
+  margin-left: 40px;
+  margin-right: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
-  font-size: 20px;
+}
+
+.box p {
+  margin-left: 70px;
+  margin-right: 70px;
+}
+
+.title {
+  font-size: 48px;
 }
 
 .bluebox {
-  padding-left: 250px;
-  margin-left: 25px;
-  height: 40px;
+  height: 30px;
   width: 200px;
-  background: #31A9DD
+  background-color: blue;
 }
-
 .orangebox {
-  padding-left: 250px;
-  margin-left: 25px;
-  height: 40px;
+  height: 30px;
   width: 200px;
-  background: #F46731;
+  background-color: orange;
 }
-
 .greenbox {
-  padding-left: 250px;
-  margin-left: 25px;
-  height: 40px;
+  height: 30px;
   width: 200px;
-  background: #2BCDC0;
+  background-color: green;
 }
 
-@media only screen and (max-width: 600px) {
-  .container {
-    display: flex;
+@media (max-width: 500px) {
+  .topbox {
+    background-color: cyan;
     flex-direction: column;
-    justify-content: center;
-    justify-items: center;
-    align-items: center;
-    width: 475px;
-    word-wrap: normal;
-    text-align: center;
   }
 
   .bottombox {
-    display: flex;
+    background-color: lightblue;
     flex-direction: column;
-    justify-content: center;
-    justify-items: center;
-    align-items: center;
-    width: 475px;
-    word-wrap: normal;
-    text-align: center;
+    height: 100%;
+    color: black;
   }
-
 }
