--- a/style.css
+++ b/style.css
@@ -1,32 +1,25 @@
 body {
-  background: #95a5a6;
+  background: #2c3e50;
 }
 
 header {
   text-align: center;
 }
 
-main {
+.main {
   text-align: center;
-}
-
-a {
-  color: black;
+  color: grey;
+  font-size: 25px;
   text-transform: uppercase;
-  
-}
-
-ul {
   list-style: none;
-}
-
-li {
-  padding: 10px;
-  transition: ease-in-out 2s;
+  border: 1px solid grey;
+  width: 300px;
+  text-align: center;
+  padding-left: 100px;
+  margin: 1px;
 }
 
 footer {
   position: fixed;
   bottom: 0;
 }
-
