--- a/06week/Checkpoint2/css/style.css
+++ b/06week/Checkpoint2/css/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: "Charmonman";
+  font-family: "Times New Roman";
   padding: 0;
   margin: 0;
   min-height: 100%;
@@ -22,7 +22,7 @@ body {
   /* border: 2px solid blueviolet; */
 }
 
-.hero {
+.top {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -32,6 +32,7 @@ body {
   /* border: 2px solid #303030; */
   opacity: 0.7;
   height: 80%;
+  padding-top: 25px;
 }
 
 nav {
@@ -39,6 +40,11 @@ nav {
   opacity: 0.7;
   color: white;
   height: 20%;
+  padding-top: 5px;
+}
+
+a {
+  color: white;
 }
 
 nav > ul {
@@ -58,7 +64,7 @@ nav > ul > li:hover {
   transition: all 1s ease-in-out;
 }
 
-.bottom-hero {
+.middle {
   display: flex;
   flex-direction: column;
   justify-content: center;
