--- a/style.css
+++ b/style.css
@@ -1,25 +1,43 @@
 body {
-  background: #2c3e50;
+  background-image: url(https://www.theme-junkie.com/wp-content/uploads/Coding-Programming-Background-4.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  padding: 0;
+  margins: 0;
 }
 
-header {
+.header {
   text-align: center;
+  font-size: 25px;
+  background-color: #22223c;
+  color: wheat;
+  border: 2px solid black;
+  width: 100%;
+  height: 10%;
+  opacity: 0.8;
+  margin: 0;
 }
 
 .main {
-  text-align: center;
-  color: grey;
-  font-size: 25px;
-  text-transform: uppercase;
+  text-align: right;
+  font-size: 30px;
+  /* border: 2px solid yellow; */
+  height: 82%;
+  width: 100%;
+}
+
+a {
+  color: whitesmoke;
+  text-decoration: none;
+}
+
+li {
   list-style: none;
-  border: 1px solid grey;
-  width: 300px;
-  text-align: center;
-  padding-left: 100px;
-  margin: 1px;
 }
 
 footer {
-  position: fixed;
-  bottom: 0;
+  height: 5%;
+  width: 100%;
+  /* border: 2px solid green; */
 }
