--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(https://www.theme-junkie.com/wp-content/uploads/Coding-Programming-Background-4.jpg);
+  background-image: url(https://static3.bigstockphoto.com/3/5/9/large1500/95362232.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
