--- a/01week/resume/css/main.css
+++ b/01week/resume/css/main.css
@@ -23,6 +23,11 @@ body {
   height: 58.33333%;
 }
 
+hr {
+  padding: 0;
+  margin: 0;
+}
+
 #left-top {
   width: 58.33333%;
   height: 100%;
@@ -34,10 +39,41 @@ body {
   height: 66.66667%;
 }
 
+#left-top .left-top .aboutMe-head {
+  font-size: 4vw;
+}
+
+#left-top .left-top .aboutMe {
+  font-size: 2vw;
+}
+
+#left-top .left-top .education-header {
+  font-size: 4vw;
+}
+
+#left-top .left-top .education {
+  font-size: 2vw;
+}
+
 #left-top .left-bottom {
   width: 100%;
   height: 33.33333%;
   background: white;
+  padding: 0;
+  margin: 0;
+}
+
+#left-top .left-bottom .name {
+  font-size: 7vw;
+  font-weight: 700;
+}
+
+#left-top .left-bottom .fswd {
+  font-size: 3vw;
+}
+
+#left-top .left-bottom .contact {
+  font-size: 3vw;
 }
 
 #right-top {
