--- a/01week/resume/css/main.scss
+++ b/01week/resume/css/main.scss
@@ -47,7 +47,10 @@ body {
   width: column-width(12);
   height: row-height(7);
 }
-
+hr {
+  padding: 0;
+  margin: 0
+}
 #left-top {
   width: column-width(7);
   height: row-height(12);
@@ -55,11 +58,35 @@ body {
   .left-top {
     width: 100%;
     height: row-height(8);
+    .aboutMe-head {
+      font-size: 4vw
+    };
+    .aboutMe {
+      font-size: 2vw
+    };
+    .education-header {
+      font-size: 4vw;
+    }
+    .education {
+      font-size: 2vw
+    }
   };
   .left-bottom {
     width: 100%;
     height: row-height(4);
     background: white;
+    padding: 0;
+    margin: 0;
+    .name {
+      font-size: 7vw;
+      font-weight: 700
+    };
+    .fswd {
+      font-size: 3vw
+    };
+    .contact {
+      font-size: 3vw
+    }
   }
 
 }
