top half mobile

--- a/01week/resume/css/main.css
+++ b/01week/resume/css/main.css
@@ -1,8 +1,10 @@
+@import url("https://fonts.googleapis.com/css?family=Arimo|Courgette|Roboto+Condensed&display=swap");
 * {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 body {
@@ -13,6 +15,7 @@ body {
   border: 7px solid black;
   width: 100%;
   height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .wrapper-top {
@@ -24,8 +27,8 @@ body {
 }
 
 hr {
-  padding: 0;
-  margin: 0;
+  color: black;
+  border: 2px solid black;
 }
 
 #left-top {
@@ -37,22 +40,27 @@ hr {
 #left-top .left-top {
   width: 100%;
   height: 66.66667%;
+  padding: 1%;
 }
 
 #left-top .left-top .aboutMe-head {
-  font-size: 4vw;
+  font-size: 5vw;
+  font-family: "Arimo", sans-serif;
 }
 
 #left-top .left-top .aboutMe {
-  font-size: 2vw;
+  font-size: 4vw;
+  line-height: 1;
+  margin-top: 2px;
 }
 
 #left-top .left-top .education-header {
-  font-size: 4vw;
+  font-size: 5vw;
+  font-family: "Arimo", sans-serif;
 }
 
 #left-top .left-top .education {
-  font-size: 2vw;
+  font-size: 4vw;
 }
 
 #left-top .left-bottom {
@@ -61,15 +69,21 @@ hr {
   background: white;
   padding: 0;
   margin: 0;
+  line-height: 1;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 #left-top .left-bottom .name {
-  font-size: 7vw;
+  font-size: 10vh;
   font-weight: 700;
+  font-family: "Arimo", sans-serif;
 }
 
 #left-top .left-bottom .fswd {
-  font-size: 3vw;
+  font-size: 5vw;
 }
 
 #left-top .left-bottom .contact {
@@ -77,14 +91,37 @@ hr {
 }
 
 #right-top {
-  width: 41.66667%;
+  width: 50%;
   height: 100%;
   background: #d50d26;
+}
+
+#right-top .contactContainer {
+  color: whitesmoke;
+  text-align: center;
+  margin: 10px 0 20px 0;
+}
+
+#right-top .interest {
+  font-weight: 800;
+  text-align: center;
+}
+
+#right-top .icons {
+  text-align: center;
+  font-size: 6vw;
 }
 
 #bottom {
   width: 100%;
   height: 41.66667%;
   background: #3269e7;
+}
+
+#bottom .javascript {
+  font-family: "Courgette", cursive;
+  color: whitesmoke;
+  font-size: 5vw;
+  text-align: center;
 }
 /*# sourceMappingURL=main.css.map */
