--- a/01week/resume/css/main.css
+++ b/01week/resume/css/main.css
@@ -123,5 +123,43 @@ hr {
   color: whitesmoke;
   font-size: 5vw;
   text-align: center;
+  margin: 20px 0 20px 0;
+}
+
+#bottom ul {
+  list-style: none;
+}
+
+#bottom #experience-1 {
+  margin-top: 2%;
+  height: 50%;
+  width: 100%;
+  font-size: 3vw;
+}
+
+#bottom #experience-1 .experienceTitle {
+  font-size: 4vh;
+}
+
+#bottom #experience-1 .job {
+  text-decoration: underline;
+  font-weight: 900;
+}
+
+#bottom #experience-1 .one {
+  width: 50%;
+  padding: 1%;
+  display: inline-block;
+}
+
+#bottom #experience-1 .two {
+  width: 50%;
+  display: inline-block;
+  float: right;
+}
+
+#bottom .three {
+  text-align: justify;
+  padding: 5%;
 }
 /*# sourceMappingURL=main.css.map */
