--- a/01week/resume/css/main.scss
+++ b/01week/resume/css/main.scss
@@ -138,7 +138,42 @@ hr {
       font-family: $cursive-font;
       color: whitesmoke;
       font-size: 5vw;
-      text-align: center
+      text-align: center;
+      margin: 20px 0 20px 0;
+    }
+    ul {
+      list-style: none
+    }
+    #experience-1 {
+      margin-top: 2%;
+      height: 50%;
+      width: 100%;
+      font-size: 3vw;
+      
+      .experienceTitle {
+        font-size: 4vh;
+      
+      }
+      .job {
+        text-decoration: underline;
+        font-weight: 900;
+        
+      }
+      .one {
+        width: 50%;
+        padding: 1%;
+        display: inline-block
+        
+      }
+      .two {
+        width: 50%;
+        display: inline-block;
+        float: right;
+      }
+    }
+    .three {
+      text-align: justify;
+      padding: 5%;
     }
   }
   
