--- a/01week/resume/css/main.css
+++ b/01week/resume/css/main.css
@@ -54,6 +54,13 @@ hr {
   margin-top: 2px;
 }
 
+@media (min-width: 768px) {
+  #left-top .left-top .aboutMe {
+    font-size: 3vw;
+    margin-top: 20px;
+  }
+}
+
 #left-top .left-top .education-header {
   font-size: 5vw;
   font-family: "Arimo", sans-serif;
@@ -61,6 +68,13 @@ hr {
 
 #left-top .left-top .education {
   font-size: 4vw;
+}
+
+@media (min-width: 768px) {
+  #left-top .left-top .education {
+    font-size: 3vw;
+    margin: 20px 0 0 0;
+  }
 }
 
 #left-top .left-bottom {
@@ -102,14 +116,33 @@ hr {
   margin: 10px 0 20px 0;
 }
 
+@media (min-width: 768px) {
+  #right-top .contactContainer {
+    font-size: 3vh;
+  }
+}
+
 #right-top .interest {
   font-weight: 800;
   text-align: center;
 }
 
+@media (min-width: 768px) {
+  #right-top .interest {
+    font-size: 5vw;
+  }
+}
+
 #right-top .icons {
   text-align: center;
   font-size: 6vw;
+}
+
+@media (min-width: 768px) {
+  #right-top .icons {
+    font-size: 5vw;
+    padding: 2%;
+  }
 }
 
 #bottom {
@@ -123,7 +156,6 @@ hr {
   color: whitesmoke;
   font-size: 5vw;
   text-align: center;
-  margin: 20px 0 20px 0;
 }
 
 #bottom ul {
@@ -131,14 +163,21 @@ hr {
 }
 
 #bottom #experience-1 {
-  margin-top: 2%;
   height: 50%;
   width: 100%;
   font-size: 3vw;
 }
 
+@media (min-width: 768px) {
+  #bottom #experience-1 {
+    font-size: 2vh;
+  }
+}
+
 #bottom #experience-1 .experienceTitle {
+  margin-top: 20px;
   font-size: 4vh;
+  margin-left: 20px;
 }
 
 #bottom #experience-1 .job {
@@ -161,5 +200,12 @@ hr {
 #bottom .three {
   text-align: justify;
   padding: 5%;
+}
+
+@media (min-width: 768px) {
+  #bottom .three {
+    padding: 0;
+    margin-left: 20px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
