--- a/01week/resume/css/main.css
+++ b/01week/resume/css/main.css
@@ -48,6 +48,12 @@ hr {
   font-family: "Arimo", sans-serif;
 }
 
+@media (min-width: 1000px) {
+  #left-top .left-top .aboutMe-head {
+    font-size: 4vh;
+  }
+}
+
 #left-top .left-top .aboutMe {
   font-size: 4vw;
   line-height: 1;
@@ -61,9 +67,21 @@ hr {
   }
 }
 
+@media (min-width: 1000px) {
+  #left-top .left-top .aboutMe {
+    font-size: 3vh;
+  }
+}
+
 #left-top .left-top .education-header {
   font-size: 5vw;
   font-family: "Arimo", sans-serif;
+}
+
+@media (min-width: 1000px) {
+  #left-top .left-top .education-header {
+    font-size: 4vh;
+  }
 }
 
 #left-top .left-top .education {
@@ -74,6 +92,12 @@ hr {
   #left-top .left-top .education {
     font-size: 3vw;
     margin: 20px 0 0 0;
+  }
+}
+
+@media (min-width: 1000px) {
+  #left-top .left-top .education {
+    font-size: 3vh;
   }
 }
 
@@ -96,12 +120,10 @@ hr {
   font-family: "Arimo", sans-serif;
 }
 
-#left-top .left-bottom .fswd {
-  font-size: 5vw;
-}
-
-#left-top .left-bottom .contact {
-  font-size: 3vw;
+@media (min-width: 1000px) {
+  #left-top .left-bottom .name {
+    font-size: 15vh;
+  }
 }
 
 #right-top {
@@ -122,6 +144,12 @@ hr {
   }
 }
 
+@media (min-width: 1000px) {
+  #right-top .contactContainer {
+    font-size: 5vh;
+  }
+}
+
 #right-top .interest {
   font-weight: 800;
   text-align: center;
@@ -130,6 +158,12 @@ hr {
 @media (min-width: 768px) {
   #right-top .interest {
     font-size: 5vw;
+  }
+}
+
+@media (min-width: 1000px) {
+  #right-top .interest {
+    font-size: 2vw;
   }
 }
 
@@ -145,10 +179,32 @@ hr {
   }
 }
 
+@media (min-width: 1000px) {
+  #right-top .icons {
+    font-size: 6vh;
+    line-height: 1;
+  }
+}
+
 #bottom {
   width: 100%;
   height: 41.66667%;
   background: #3269e7;
+}
+
+@media (mid-width: 1000px) {
+  #bottom .bottomWrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
 }
 
 #bottom .javascript {
@@ -156,6 +212,12 @@ hr {
   color: whitesmoke;
   font-size: 5vw;
   text-align: center;
+}
+
+@media (min-width: 1000px) {
+  #bottom .javascript {
+    font-size: 3vw;
+  }
 }
 
 #bottom ul {
@@ -174,9 +236,16 @@ hr {
   }
 }
 
+@media (min-width: 1000px) {
+  #bottom #experience-1 {
+    height: auto;
+    width: 100%;
+  }
+}
+
 #bottom #experience-1 .experienceTitle {
   margin-top: 20px;
-  font-size: 4vh;
+  font-size: 5vh;
   margin-left: 20px;
 }
 
@@ -191,10 +260,29 @@ hr {
   display: inline-block;
 }
 
+@media (min-width: 1000px) {
+  #bottom #experience-1 .one {
+    width: 30%;
+    margin: 0 0 0 20px;
+    font-size: 3vh;
+    padding: 0;
+  }
+}
+
 #bottom #experience-1 .two {
   width: 50%;
   display: inline-block;
   float: right;
+}
+
+@media (min-width: 1000px) {
+  #bottom #experience-1 .two {
+    width: 30%;
+    padding: 0;
+    float: none;
+    font-size: 3vh;
+    height: 100%;
+  }
 }
 
 #bottom .three {
@@ -206,6 +294,15 @@ hr {
   #bottom .three {
     padding: 0;
     margin-left: 20px;
+  }
+}
+
+@media (min-width: 1000px) {
+  #bottom .three {
+    width: 30%;
+    display: inline-block;
+    padding: 0;
+    font-size: 3vh;
   }
 }
 /*# sourceMappingURL=main.css.map */
