checked the font on my phone

--- a/01week/resume/css/main.css
+++ b/01week/resume/css/main.css
@@ -86,6 +86,7 @@ hr {
 
 #left-top .left-top .education {
   font-size: 4vw;
+  line-height: 1;
 }
 
 @media (min-width: 768px) {
@@ -115,9 +116,10 @@ hr {
 }
 
 #left-top .left-bottom .name {
-  font-size: 10vh;
+  font-size: 8vh;
   font-weight: 700;
   font-family: "Arimo", sans-serif;
+  line-height: 1;
 }
 
 @media (min-width: 1000px) {
@@ -170,6 +172,7 @@ hr {
 #right-top .icons {
   text-align: center;
   font-size: 6vw;
+  line-height: 1;
 }
 
 @media (min-width: 768px) {
