--- a/01week/resume/css/main.scss
+++ b/01week/resume/css/main.scss
@@ -99,6 +99,7 @@ hr {
     }
     .education {
       font-size: 4vw;
+      line-height: 1;
       @media(min-width: 768px){
         font-size: 3vw;
         margin: 20px 0 0 0
@@ -118,9 +119,10 @@ hr {
     text-align: center;
     justify-content: center;
     .name {
-      font-size: 10vh;
+      font-size: 8vh;
       font-weight: 700;
       font-family: $title-font;
+      line-height: 1;
       @media(min-width: 1000px){
         font-size: 15vh
       }
@@ -158,6 +160,7 @@ hr {
   .icons {
     text-align: center;
     font-size: 6vw;
+    line-height: 1;
     @media(min-width: 768px){
       font-size: 5vw;
       padding: 2%;
