added repo to resume

--- a/01week/resume/css/main.scss
+++ b/01week/resume/css/main.scss
@@ -161,6 +161,7 @@ hr {
     text-align: center;
     font-size: 6vw;
     line-height: 1;
+    margin-top:5px;
     @media(min-width: 768px){
       font-size: 5vw;
       padding: 2%;
