update font size

--- a/01week/resume/css/main.scss
+++ b/01week/resume/css/main.scss
@@ -113,7 +113,7 @@ hr {
     width: 100%;
     height: row-height(4);
     background: white;
-    padding: 0;
+    padding: 4%;
     margin: 0;
     line-height: 1;
     text-align: center;
@@ -123,8 +123,8 @@ hr {
       font-weight: 700;
       font-family: $title-font;
       line-height: 1;
-      @media(min-width: 1060px){
-        font-size: 15vh
+      @media(min-width: 768px){
+        font-size: 11vh;
       }
     };
  
@@ -167,7 +167,7 @@ hr {
       padding: 2%;
     }
     @media(min-width: 1060px){
-      font-size: 6vh;
+      font-size: 5vh;
       line-height: 1
     }
 
