--- a/01week/resume/css/main.css
+++ b/01week/resume/css/main.css
@@ -106,7 +106,7 @@ hr {
   width: 100%;
   height: 33.33333%;
   background: white;
-  padding: 0;
+  padding: 4%;
   margin: 0;
   line-height: 1;
   text-align: center;
@@ -122,9 +122,9 @@ hr {
   line-height: 1;
 }
 
-@media (min-width: 1060px) {
+@media (min-width: 768px) {
   #left-top .left-bottom .name {
-    font-size: 15vh;
+    font-size: 11vh;
   }
 }
 
@@ -185,7 +185,7 @@ hr {
 
 @media (min-width: 1060px) {
   #right-top .icons {
-    font-size: 6vh;
+    font-size: 5vh;
     line-height: 1;
   }
 }
